# deepsynth

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
deepsynth/: hyperparameter_optimization.py  model_generation.py  nas.py  transfer_learning.py  visualization.py
docs/: index.md
examples/: example_usage.py
tests/: test_deepsynth.py
