[tool.poetry]
name = "deepsynth"
version = "0.1.2"
description = "A Python package for synthesizing deep learning models using advanced techniques like NAS, Hyperparameter Optimization, and more."
authors = ["venombolteop <venombolteop@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/venombolteop/deepsynth"
repository = "https://github.com/venombolteop/deepsynth"
documentation = "https://github.com/venombolteop/deepsynth/wiki"

[tool.poetry.dependencies]
python = "*"
numpy = "*"
tensorflow = "*"
keras = "*"
hyperopt = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
flake8 = "^3.9.2"

[tool.poetry.scripts]
deepsynth = "deepsynth.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
