[tool.poetry]
name = "deepsynth"
version = "0.1.3"
description = "A Python package for synthesizing deep learning models using advanced techniques like NAS, Hyperparameter Optimization, and more."
authors = ["venombolteop <venombolteop@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/venombolteop/deepsynth"
repository = "https://github.com/venombolteop/deepsynth"
documentation = "https://github.com/venombolteop/deepsynth/wiki"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.23.5"
h5py = "^3.9.0"
tensorflow = "2.17.0"  # Example version, adjust as needed
keras = "*"      # Example version, adjust as needed
hyperopt = "*"    # Example version, adjust as needed

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
deepsynth = "deepsynth.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
